--- a/css/styles.css
+++ b/css/styles.css
@@ -1,4 +1,4 @@
-body {
+/*body {
   text-align: center;
   font-family: courier;
   background-image: url("../assets/image.jpeg");
@@ -19,6 +19,57 @@ body {
 
 .my_social a img {
   height: 1.5em;
+}
+
+html {
+  backkground-color: grey;
+  background-image: url("http://fc09.deviantart.net/fs71/i/2013/352/8/1/newspaper_collage_texture_by_flordeneu-d6yeuvs.jpg");
+}
+
+button {
+  position: absolute;
+  left: 160px;
+  bottom: 10px;
+}
+
+#controls {
+  float: left;
+}
+#controls li {
+  list-style: none;
+}
+
+#container {
+  height: 400px;
+  width: 350px;
+  position: fixed;
+  border: solid black 1px;
+  background-color: white;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+#container:hover {
+  cursor: pointer;
+}
+
+h1 {
+  text-align: center;
+  text-decoration: underline;
+}
+
+td {
+  float: right;
+  border: 1px solid #f7f7f7;
+  color: #f2f2f2;
+  /*background-color: grey;*/
+/*  height: 20px;
+  width: 10px;
+  padding: 2px 6px;
+  font-size: 20px;
+}
+td:hover {
+  color: grey;
 }
 
 .containers {
