--- a/css/styles.css
+++ b/css/styles.css
@@ -14,12 +14,11 @@ html {
   height: 2.5em;
 }
 
-/*.my_social a img {
+.my_social a img {
   height: 1.5em;
 }
 
-
-button {
+/*button {
   position: absolute;
   left: 160px;
   bottom: 10px;
