--- a/css/styles.css
+++ b/css/styles.css
@@ -57,11 +57,12 @@ td {
   border: 1px solid #f7f7f7;
   color: #f2f2f2;
   /*background-color: grey;*/
-  /*  height: 20px;
+  height: 20px;
   width: 10px;
   padding: 2px 6px;
   font-size: 20px;
 }
+
 /*td:hover {
   color: grey;
 }
