--- a/css/styles.css
+++ b/css/styles.css
@@ -67,12 +67,12 @@ td:hover {
   color: grey;
 }
 
-/*.containers {
+.containers {
   width: 520px;
   margin: 20px auto;
 }
 
-#contact h1 {
+/*#contact h1 {
   font-family: helvetica;
   font-weight: normal;
   text-align: center;
